--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Poster References</title>
+    <title>References for Poster Presentation </title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -36,9 +36,6 @@
 <body>
     <h1>References</h1>
     <ol>
-        <li>CPCB. Annual Report 2010-21 on Implementation of Solid Waste Management Rules, 2016. <a href="https://cpcb.nic.in/uploads/plasticwaste/Annual_Report_2019-20_PWM.pdf" target="_blank">https://cpcb.nic.in/uploads/plasticwaste/Annual_Report_2019-20_PWM.pdf</a> (2022).</li>
-        <li>MSW Rules. Municipal Solid Wastes (Management and Handling) Rules, 2000. Ministry of Environment and Forests-The Gazette of India 1–28 (2000).</li>
-        <li>Hettiaratchi, J. P. A. et al. Innovative Practices to Maximize Resource Recovery and Minimize Greenhouse Gas Emissions from Landfill Waste Cells: Historical and Recent Developments. <em>J. Indian Inst. Sci.</em> 101, 537–556 (2021).</li>
         <li>Straub, W. A. & Lynch, D. R. Models of landfill leaching: moisture flow and inorganic strength. <em>J. Environ. Eng. Div. - ASCE</em> 108, 231–250 (1982).</li>
         <li>Young, A. Mathematical modelling of landfill degradation. <em>J. Chem. Technol. Biotechnol.</em> 46, 189–208 (1989).</li>
         <li>El-Fadel, M., Findikakis, A. N. & Leckie, J. O. Numerical modelling of generation and transport of gas and heat in sanitary landfills. II. Model application. <em>Waste Manag. Res.</em> 14, 537–551 (1996).</li>
@@ -55,6 +52,10 @@
         <li>Hubert, J., Liu, X. F. & Collin, F. Numerical modeling of the long term behavior of Municipal Solid Waste in a bioreactor landfill. <em>Comput. Geotech.</em> 72, 152–170 (2016).</li>
         <li>Reddy, K. R., Giri, R. K. & Kulkarni, H. S. Modeling Coupled Hydromechanical Behavior of Landfilled Waste in Bioreactor Landfills: Numerical Formulation and Validation. <em>J. Hazardous, Toxic, Radioact. Waste</em> 21, 1–16 (2017).</li>
         <li>Kumar, G. & Reddy, K. R. Comprehensive coupled thermo-hydro-bio-mechanical model for holistic performance assessment of municipal solid waste landfills. <em>Comput. Geotech.</em> 132, 103920 (2021).</li>
+        <!--<li>CPCB. Annual Report 2010-21 on Implementation of Solid Waste Management Rules, 2016. <a href="https://cpcb.nic.in/uploads/plasticwaste/Annual_Report_2019-20_PWM.pdf" target="_blank">https://cpcb.nic.in/uploads/plasticwaste/Annual_Report_2019-20_PWM.pdf</a> (2022).</li>
+        <li>MSW Rules. Municipal Solid Wastes (Management and Handling) Rules, 2000. Ministry of Environment and Forests-The Gazette of India 1–28 (2000).</li>
+        <li>Hettiaratchi, J. P. A. et al. Innovative Practices to Maximize Resource Recovery and Minimize Greenhouse Gas Emissions from Landfill Waste Cells: Historical and Recent Developments. <em>J. Indian Inst. Sci.</em> 101, 537–556 (2021).</li>
+        <li>Staub, M. J., Gourc, J.-P., Drut, N., Stoltz, G. & Mansour, A. A. Large-scale bioreactor pilots for monitoring the long-term hydromechanics of MSW. <em>J. Hazardous, Toxic, Radioact. Waste</em> 17, 285–294 (2013).</li>
         <li>Sowers, G. F. Settlement of waste disposal fills. <em>Int. J. Rock Mech. Min. Sci. & Geomech. Abstr.</em> 12, 57–58 (1975).</li>
         <li>Yen, B. C. & Scanlon, B. Sanitary Landfill Settlement Rates. <em>J. Geotech. Eng. Div.</em> 101, 475–487 (1975).</li>
         <li>Grisolia, M., Gasparini, A. & Saetti, G. F. Survey on waste compressibility. <em>Proc. Sardinia</em> 2, 1447–1456 (1993).</li>
@@ -82,10 +83,9 @@
         <li>van Genuchten, M. T. A Closed-form Equation for Predicting the Hydraulic Conductivity of Unsaturated Soils. <em>Soil Sci. Soc. Am. J.</em> 44, 892–898 (1980).</li>
         <li>Olivier, F. & Gourc, J. P. Hydro-mechanical behavior of Municipal Solid Waste subject to leachate recirculation in a large-scale compression reactor cell. <em>Waste Manag.</em> 27, 44–58 (2007).</li>
         <li>Ivanova, L. K., Richards, D. J. & Smallman, D. J. The long-term settlement of landfill waste. <em>Proc. Inst. Civ. Eng. Waste Resour. Manag.</em> 161, 121–133 (2008).</li>
-        <li>Staub, M. J., Gourc, J.-P., Drut, N., Stoltz, G. & Mansour, A. A. Large-scale bioreactor pilots for monitoring the long-term hydromechanics of MSW. <em>J. Hazardous, Toxic, Radioact. Waste</em> 17, 285–294 (2013).</li>
         <li>Fei, X. & Zekkosf, D. Coupled experimental assessment of physico-biochemical characteristics of municipal solid waste undergoing enhanced biodegradation. <em>Geotechnique</em> 68, 1031–1043 (2018).</li>
         <li>Zhan, L.-T. et al. Biochemical, hydrological and mechanical behaviors of high food waste content MSW landfill: Preliminary findings from a large-scale experiment. <em>Waste Manag.</em> 63, 27–40 (2017).</li>
-        <li>Gangathulasi, J. Effects of leachate recirculation on geotechnical properties of municipal solid waste in landfills. (2008).</li>
+        <li>Gangathulasi, J. Effects of leachate recirculation on geotechnical properties of municipal solid waste in landfills. (2008).</li>-->
     </ol>
 </body>
 </html>
