--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
         h1 {
             color: #333;
             text-align: center;
+            margin-bottom: 10px;
+        }
+        h2 {
+            color: #555;
+            text-align: center;
+            font-size: 1.2em;
+            margin-top: 0;
+            margin-bottom: 20px;
+        }
+         h2 {
+            color: #555;
+            text-align: center;
+            font-size: 1.2em;
+            margin-top: 0;
+            margin-bottom: 20px;
         }
         ol {
             list-style-type: decimal;
@@ -35,6 +50,9 @@
 </head>
 <body>
     <h1>References</h1>
+    <h2> List of Studies mentioned in Poster Presentation #123 at PMRF Symposium  at IIT Hyderabad, India</h2>
+    <h3> Presenter: Sayeeda Syed. PMRF ID 2802886</h3>
+    
     <ol>
         <li>Straub, W. A. & Lynch, D. R. Models of landfill leaching: moisture flow and inorganic strength. <em>J. Environ. Eng. Div. - ASCE</em> 108, 231–250 (1982).</li>
         <li>Young, A. Mathematical modelling of landfill degradation. <em>J. Chem. Technol. Biotechnol.</em> 46, 189–208 (1989).</li>
