--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         h2 {
             color: #555;
             text-align: center;
-            font-size: 1.2em;
+            font-size: 1em;
             margin-top: 0;
             margin-bottom: 20px;
         }
          h3 {
             color: #555;
             text-align: center;
-            font-size: 1.2em;
+            font-size: .9em;
             margin-top: 0;
             margin-bottom: 20px;
         }
@@ -50,7 +50,7 @@
 </head>
 <body>
     <h1>References</h1>
-    <h2> List of Studies mentioned in Poster Presentation #123 at PMRF Symposium  at IIT Hyderabad, India</h2>
+    <h2> List of Studies mentioned in Poster Presentation #S25PMRF096 at PMRF Symposium  at IIT Hyderabad, 2025, India</h2>
     <h3> Presenter: Sayeeda Syed. PMRF ID 2802886</h3>
     
     <ol>
