--- a/index.html
+++ b/index.html
@@ -54,56 +54,24 @@
     <h3> Presenter: Sayeeda Syed. PMRF ID 2802886</h3>
     
     <ol>
-        <li>Straub, W. A. & Lynch, D. R. Models of landfill leaching: moisture flow and inorganic strength. <em>J. Environ. Eng. Div. - ASCE</em> 108, 231–250 (1982).</li>
-        <li>Young, A. Mathematical modelling of landfill degradation. <em>J. Chem. Technol. Biotechnol.</em> 46, 189–208 (1989).</li>
-        <li>El-Fadel, M., Findikakis, A. N. & Leckie, J. O. Numerical modelling of generation and transport of gas and heat in sanitary landfills. II. Model application. <em>Waste Manag. Res.</em> 14, 537–551 (1996).</li>
-        <li>Hashemi, M., Kavak, H. I., Tsotsis, T. T. & Sahimi, M. Computer simulation of gas generation and transport in landfills - I: Quasi-steady-state condition. <em>Chem. Eng. Sci.</em> 57, 2475–2501 (2002).</li>
-        <li>White, J., Robinson, J. & Ren, Q. Modelling the biochemical degradation of solid waste in landfills. <em>Waste Manag.</em> 24, 227–240 (2004).</li>
-        <li>Durmusoglu, E., Corapcioglu, M. Y. & Tuncay, K. Landfill Settlement with Decomposition and Gas Generation. <em>J. Environ. Eng.</em> 131, 1311–1321 (2005).</li>
-        <li>McDougall, J. A hydro-bio-mechanical model for settlement and other behaviour in landfilled waste. <em>Comput. Geotech.</em> 34, 229–246 (2007).</li>
-        <li>Machado, S. L., Vilar, O. M. & Carvalho, M. F. Constitutive model for long term municipal solid waste mechanical behavior. <em>Comput. Geotech.</em> 35, 775–790 (2008).</li>
-        <li>Hettiarachchi, H., Meegoda, J. & Hettiaratchi, P. Effects of gas and moisture on modeling of bioreactor landfill settlement. <em>Waste Manag.</em> 29, 1018–1025 (2009).</li>
-        <li>Sivakumar Babu, G. L., Reddy, K. R. & Chouksey, S. K. Constitutive model for municipal solid waste incorporating mechanical creep and biodegradation-induced compression. <em>Waste Manag.</em> 30, 11–22 (2010).</li>
-        <li>Liu, X., Shi, J., Qian, X., Hu, Y. & Peng, G. One-dimensional model for municipal solid waste (MSW) settlement considering coupled mechanical-hydraulic-gaseous effect and concise calculation. <em>Waste Manag.</em> 31, 2473–2483 (2011).</li>
+        <li>Angelidaki, I., Ellegaard, L., & Ahring, B. K. A mathematical model for dynamic simulation of anaerobic digestion of complex substrates: focusing on ammonia inhibition.<em> Biotechnology and bioengineering</em>, 42(2), 159-166 (1993).<li>
         <li>Bente, S. Interaction of Degradation, Deformation and Transport Processes in Municipal Solid Waste Landfills. (2010).</li>
         <li>Chen, Y., Xu, X. & Zhan, L. Analysis of solid-liquid-gas interactions in landfilled municipal solid waste by a bio-hydro-mechanical coupled model. <em>Sci. China Technol. Sci.</em> 55, 81–89 (2012).</li>
+        <li>Durmusoglu, E., Corapcioglu, M. Y. & Tuncay, K. Landfill Settlement with Decomposition and Gas Generation. <em>J. Environ. Eng.</em> 131, 1311–1321 (2005).</li>
+        <li>El-Fadel, M., Findikakis, A. N. & Leckie, J. O. Numerical modelling of generation and transport of gas and heat in sanitary landfills. II. Model application. <em>Waste Manag. Res.</em> 14, 537–551 (1996).</li>
+        <li>Hashemi, M., Kavak, H. I., Tsotsis, T. T. & Sahimi, M. Computer simulation of gas generation and transport in landfills - I: Quasi-steady-state condition. <em>Chem. Eng. Sci.</em> 57, 2475–2501 (2002).</li>
+        <li>Hettiarachchi, H., Meegoda, J. & Hettiaratchi, P. Effects of gas and moisture on modeling of bioreactor landfill settlement. <em>Waste Manag.</em> 29, 1018–1025 (2009).</li>
         <li>Hubert, J., Liu, X. F. & Collin, F. Numerical modeling of the long term behavior of Municipal Solid Waste in a bioreactor landfill. <em>Comput. Geotech.</em> 72, 152–170 (2016).</li>
-        <li>Reddy, K. R., Giri, R. K. & Kulkarni, H. S. Modeling Coupled Hydromechanical Behavior of Landfilled Waste in Bioreactor Landfills: Numerical Formulation and Validation. <em>J. Hazardous, Toxic, Radioact. Waste</em> 21, 1–16 (2017).</li>
         <li>Kumar, G. & Reddy, K. R. Comprehensive coupled thermo-hydro-bio-mechanical model for holistic performance assessment of municipal solid waste landfills. <em>Comput. Geotech.</em> 132, 103920 (2021).</li>
-        <!--<li>CPCB. Annual Report 2010-21 on Implementation of Solid Waste Management Rules, 2016. <a href="https://cpcb.nic.in/uploads/plasticwaste/Annual_Report_2019-20_PWM.pdf" target="_blank">https://cpcb.nic.in/uploads/plasticwaste/Annual_Report_2019-20_PWM.pdf</a> (2022).</li>
-        <li>MSW Rules. Municipal Solid Wastes (Management and Handling) Rules, 2000. Ministry of Environment and Forests-The Gazette of India 1–28 (2000).</li>
-        <li>Hettiaratchi, J. P. A. et al. Innovative Practices to Maximize Resource Recovery and Minimize Greenhouse Gas Emissions from Landfill Waste Cells: Historical and Recent Developments. <em>J. Indian Inst. Sci.</em> 101, 537–556 (2021).</li>
-        <li>Staub, M. J., Gourc, J.-P., Drut, N., Stoltz, G. & Mansour, A. A. Large-scale bioreactor pilots for monitoring the long-term hydromechanics of MSW. <em>J. Hazardous, Toxic, Radioact. Waste</em> 17, 285–294 (2013).</li>
-        <li>Sowers, G. F. Settlement of waste disposal fills. <em>Int. J. Rock Mech. Min. Sci. & Geomech. Abstr.</em> 12, 57–58 (1975).</li>
-        <li>Yen, B. C. & Scanlon, B. Sanitary Landfill Settlement Rates. <em>J. Geotech. Eng. Div.</em> 101, 475–487 (1975).</li>
-        <li>Grisolia, M., Gasparini, A. & Saetti, G. F. Survey on waste compressibility. <em>Proc. Sardinia</em> 2, 1447–1456 (1993).</li>
-        <li>Park, H. I. & Lee, S. R. Long-term settlement behavior of landfills with refuse decomposition. <em>J. Solid Waste Technol. Manag.</em> 24, 159–165 (1997).</li>
-        <li>El-Fadel, M. & Khoury, R. Modeling settlement in MSW landfills: A critical review. <em>Crit. Rev. Environ. Sci. Technol.</em> 30, 327–361 (2000).</li>
-        <li>Marques, A. C. M., Filz, G. M. & Vilar, O. M. Composite Compressibility Model for Municipal Solid Waste. <em>J. Geotech. Geoenviron. Eng.</em> 129, 372–378 (2003).</li>
-        <li>Oweis, I. S. Estimate of Landfill Settlements Due to Mechanical and Decompositional Processes. <em>J. Geotech. Geoenviron. Eng.</em> 132, 644–650 (2006).</li>
-        <li>Ling, H. I., Leshchinsky, D., Mohri, Y. & Kawabata, T. Estimation of Municipal Solid Waste Landfill Settlement. <em>J. Geotech. Geoenviron. Eng.</em> 124, 21–28 (1998).</li>
-        <li>Singh, S. & Murphy, B. Evaluation of the Stability of Sanitary Landfills. <em>Geotechnics of Waste Fills—Theory and Practice</em> 240-240–19 (ASTM International, 1990). doi:10.1520/STP25310S.</li>
-        <li>Jessberger, H. L., Syllwasschy, O. & Kockel, R. Investigation of waste body behaviour and waste structure interaction. <em>Proc. Sardinia</em> 95, 731–743 (1995).</li>
-        <li>Kavazanjian Jr., E., Matasovic, N., Bonaparte, R. & Schmertmann, G. R. Evaluation of MSW properties for seismic analysis. <em>Geotech. Spec. Publ.</em> 1126–1141 (ASCE, 1995).</li>
-        <li>Manassero, M., Van Impe, W. F. & Bouazza, A. Waste Disposal and Containment. <em>Environ. Geotech.</em> 1733–1751 (1997).</li>
-        <li>Vilar, O. M. & Carvalho, M. de F. Shear strength properties of municipal solid waste. <em>Proc.</em> (2002).</li>
-        <li>Liu, C. N., Chen, R. H. & Chen, K. S. Unsaturated consolidation theory for the prediction of long-term municipal solid waste landfill settlement. <em>Waste Manag. Res.</em> 24, 80–91 (2006).</li>
-        <li>McDougall, J. R. & Pyrah, I. C. Phase relations for decomposable soils. <em>Geotechnique</em> 54, 487–493 (2004).</li>
-        <li>Kölsch, F. Der Einfluss der Faserbestandteile auf die Scherfestigkeit von Siedlungsabfall. (na, 1996).</li>
-        <li>Machado, S. L., Carvalho, M. F. & Vilar, O. M. Constitutive Model for Municipal Solid Waste. <em>J. Geotech. Geoenviron. Eng.</em> 128, 940–951 (2002).</li>
-        <li>Krase, V., Bente, S., Kowalsky, U. & Dinkler, D. Modelling the stress-deformation behaviour of municipal solid waste. <em>Geotechnique</em> 61, 665–675 (2011).</li>
-        <li>Bente, S., Krase, V., Kowalsky, U. & Dinkler, D. Model for degradation-induced settlements as part of a coupled landfill model. <em>Int. J. Numer. Anal. Methods Geomech.</em> 41, 1390–1410 (2017).</li>
-        <li>Hossain, M. S. & Haque, M. A. The effects of daily cover soils on shear strength of municipal solid waste in bioreactor landfills. <em>Waste Manag.</em> 29, 1568–1576 (2009).</li>
-        <li>Kockel, R. Scherfestigkeit von Mischabfall im Hinblick auf die Standsicherheit von Deponien. (Inst. für Grundbau, 1995).</li>
-        <li>Fletcher, G. A. The Principle of Effective Demand. <em>Keynes. Revolut. its Critics</em> 39, 58–67 (1989).</li>
-        <li>Schrefler, B. A. & Xiaoyong, Z. A fully coupled model for water flow and airflow in deformable porous media. <em>Water Resour. Res.</em> 29, 155–167 (1993).</li>
-        <li>Biot, M. A. Theory of elasticity and consolidation for a porous anisotropic solid. <em>J. Appl. Phys.</em> 26, 182–185 (1955).</li>
-        <li>van Genuchten, M. T. A Closed-form Equation for Predicting the Hydraulic Conductivity of Unsaturated Soils. <em>Soil Sci. Soc. Am. J.</em> 44, 892–898 (1980).</li>
-        <li>Olivier, F. & Gourc, J. P. Hydro-mechanical behavior of Municipal Solid Waste subject to leachate recirculation in a large-scale compression reactor cell. <em>Waste Manag.</em> 27, 44–58 (2007).</li>
-        <li>Ivanova, L. K., Richards, D. J. & Smallman, D. J. The long-term settlement of landfill waste. <em>Proc. Inst. Civ. Eng. Waste Resour. Manag.</em> 161, 121–133 (2008).</li>
-        <li>Fei, X. & Zekkosf, D. Coupled experimental assessment of physico-biochemical characteristics of municipal solid waste undergoing enhanced biodegradation. <em>Geotechnique</em> 68, 1031–1043 (2018).</li>
-        <li>Zhan, L.-T. et al. Biochemical, hydrological and mechanical behaviors of high food waste content MSW landfill: Preliminary findings from a large-scale experiment. <em>Waste Manag.</em> 63, 27–40 (2017).</li>
-        <li>Gangathulasi, J. Effects of leachate recirculation on geotechnical properties of municipal solid waste in landfills. (2008).</li>-->
+        <li>Liu, X., Shi, J., Qian, X., Hu, Y. & Peng, G. One-dimensional model for municipal solid waste (MSW) settlement considering coupled mechanical-hydraulic-gaseous effect and concise calculation. <em>Waste Manag.</em> 31, 2473–2483 (2011).</li>
+        <li>Machado, S. L., Vilar, O. M. & Carvalho, M. F. Constitutive model for long term municipal solid waste mechanical behavior. <em>Comput. Geotech.</em> 35, 775–790 (2008).</li>
+        <li>McDougall, J. A hydro-bio-mechanical model for settlement and other behaviour in landfilled waste. <em>Comput. Geotech.</em> 34, 229–246 (2007).</li>
+        <li>Reddy, K. R., Giri, R. K. & Kulkarni, H. S. Modeling Coupled Hydromechanical Behavior of Landfilled Waste in Bioreactor Landfills: Numerical Formulation and Validation. <em>J. Hazardous, Toxic, Radioact. Waste</em> 21, 1–16 (2017).</li>
+        <li>Sivakumar Babu, G. L., Reddy, K. R. & Chouksey, S. K. Constitutive model for municipal solid waste incorporating mechanical creep and biodegradation-induced compression. <em>Waste Manag.</em> 30, 11–22 (2010).</li>
+        <li>Straub, W. A. & Lynch, D. R. Models of landfill leaching: moisture flow and inorganic strength. <em>J. Environ. Eng. Div. - ASCE</em> 108, 231–250 (1982).</li>
+        <li>White, J., Robinson, J. & Ren, Q. Modelling the biochemical degradation of solid waste in landfills. <em>Waste Manag.</em> 24, 227–240 (2004).</li>
+        <li>Young, A. Mathematical modelling of landfill degradation. <em>J. Chem. Technol. Biotechnol.</em> 46, 189–208 (1989).</li>
+        <li>Zekkos, D., Data, S., Fei, X. Coupled process modeling for energy generation from municipal solid waste degradation: Laboratory-scale and field-scale simulations. <em>Japanese Geotechnical</em> Society Special Publication 9, 485–503 (2021).</li>
     </ol>
 </body>
 </html>
