--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </style>
 </head>
 <body>
-    <img src="https://github.com/syedi001/poster-references/blob/images/Literature%20Review%20Table.png" alt="Descriptive Text">
+    <img src="https://raw.githubusercontent.com/syedi001/poster-references/main/images/Literature%20Review%20Table.png" alt="Literature Review">
     <h1>References</h1>
     <h2> List of Studies mentioned in Poster Presentation #S25PMRF096 at PMRF Symposium  at IIT Hyderabad, 2025, India</h2>
     <h3> Presenter: Sayeeda Syed. PMRF ID 2802886</h3>
