--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     </style>
 </head>
 <body>
-    <img src="https://raw.githubusercontent.com/syedi001/poster-references/main/Literature%20Review%20Table.png" alt="Literature Review" width="600">
     <h1>References</h1>
-    <h2> List of Studies mentioned in Poster Presentation #S25PMRF096 at PMRF Symposium  at IIT Hyderabad, 2025, India</h2>
-    <h3> Presenter: Sayeeda Syed. PMRF ID 2802886</h3>
+    <img src="https://raw.githubusercontent.com/syedi001/poster-references/main/Literature%20Review%20Table.png" alt="Literature Review" width="600" style="display: block; margin: 0 auto;>
+      <h2> Literature review for Coupled THBM models for MSW</h2>
+    <!--<h3> Presenter: Sayeeda Syed. PMRF ID 2802886</h3> and -->
     
     <ol>
         <li>Angelidaki, I., Ellegaard, L., & Ahring, B. K. A mathematical model for dynamic simulation of anaerobic digestion of complex substrates: focusing on ammonia inhibition.<em> Biotechnology and bioengineering</em>, 42(2), 159-166 (1993).<li>
