--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <h1>References</h1>
-    <img src="https://raw.githubusercontent.com/syedi001/poster-references/main/Literature%20Review%20Table.png" alt="Literature Review" width="600" style="display: block; margin: 0 auto;>
+    <img src="https://raw.githubusercontent.com/syedi001/poster-references/main/Literature%20Review%20Table.png" alt="Literature Review" width="600">
       <h2> Literature review for Coupled THBM models for MSW</h2>
     <!--<h3> Presenter: Sayeeda Syed. PMRF ID 2802886</h3> and -->
     
